fix for device-carousel-indicators position on tablet

--- a/www/css/main.css
+++ b/www/css/main.css
@@ -404,7 +404,7 @@ a:hover, a:focus {
   }
 
   .device-carousel-indicators {
-    bottom: 60px;
+    bottom: 54px;
   }
 
   .header {
@@ -421,7 +421,7 @@ a:hover, a:focus {
   }
 
   .device-carousel-indicators {
-    bottom: 65px;
+    bottom: 55px;
   }
 
 }
